--- a/platform/BUILD.bazel
+++ b/platform/BUILD.bazel
@@ -42,6 +42,9 @@ config_setting(name = "linux_amd64?",
 config_setting(name = "macos_amd64?",
                constraint_values = ["@platforms//cpu:x86_64",
                                     "@platforms//os:macos"])
+config_setting(name = "macos_amd64",
+               constraint_values = ["@platforms//cpu:x86_64",
+                                    "@platforms//os:macos"])
 
 alias(name = "linux_x86_64?", actual = ":linux_amd64")
 alias(name = "macos_x86_64?", actual = ":macos_amd64")
