--- a/testsuite/tests/typing-misc/BUILD.bazel
+++ b/testsuite/tests/typing-misc/BUILD.bazel
@@ -295,7 +295,7 @@ test_module(
     module = "Pr8548__Mapping",
     struct = "mapping.ml",
     opts   = ["-no-alias-deps"],
-    warnings = [w.NO_CMI_FILE_49],
+    warnings = {"disable": [w.NO_CMI_FILE_49]},
 )
 
 test_module(
@@ -307,7 +307,7 @@ test_module(
         ":Pr8548__Mapping",
         ":Pr8548__Range_intf"
     ],
-    warnings = [w.UNUSED_VALUE_DECLARATION_32]
+    warnings = {"disable": [w.UNUSED_VALUE_DECLARATION_32]}
 )
 
 test_module(
