--- a/profile/system/macos/BUILD.bazel
+++ b/profile/system/macos/BUILD.bazel
@@ -13,8 +13,8 @@ cc_build_profile(
     name        = "local",
     ARCH        = "amd64",
     SYSTEM      = "macosx",
-    HOST        = "x86_64-apple-darwin21.6.0",
-    TARGET      = "x86_64-apple-darwin21.6.0",
+    HOST        = "aarch64-apple-darwin22.6.9",
+    TARGET      = "aarch64-apple-darwin22.6.9",
     PREFIX      = PREFIX,
     EXEC_PREFIX = EXEC_PREFIX,
     LIBDIR      = LIBDIR,
