--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -8,10 +8,10 @@ bazel_dep(name = "platforms",    version = "0.0.7")
 bazel_dep(name = "bazel_skylib", version = "1.4.2")
 bazel_dep(name = "rules_cc",     version = "0.0.8")
 
-cc_config = use_extension("//bzl/EXTENSIONS:cc_config.bzl",
-                      "cc_config")
-# cc_config.xcode(version = "13.3.0")
-use_repo(cc_config, "ocaml_xcode")
+config = use_extension("//bzl/EXTENSIONS:config.bzl",
+                      "config")
+# config.xcode(version = "13.3.0")
+use_repo(config, "ocaml_config")
 
 # this will have no effect if this module is a bazel_dep.
 # but: what if we want to do dev on ocamlcc by
