--- a/config/config.initial.json
+++ b/config/config.initial.json
@@ -54,8 +54,8 @@
     "ext_asm": "s",
     "ext_lib": "a",
     "ext_dll": "so",
-    "host": "x86_64-apple-darwin22.1.0",
-    "target": "x86_64-apple-darwin22.1.0",
+    "host": "aarch64-apple-darwin22.9.0",
+    "target": "aarch64-apple-darwin22.9.0",
     "systhread_supported": true,
     "flexdll_dirs": []
 }
